src/test/deca/syntax/valid/SansObjet/ReadIntTest.deca
//Description
//  test de readint
//
//Résultat
//  ok

{
    int x = readInt();
}